--- a/shorter/templates/urls/success.html
+++ b/shorter/templates/urls/success.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 The following URL:<br/>
-<pre>{{ link }}</pre>
+<pre>{{ link.url }}</pre>
 <br/>
 Was shortened to:<br/>
 <input id="link" type="text" size="30" value="{% short_it link %}"/>
