--- a/shorter/templates/base.html
+++ b/shorter/templates/base.html
@@ -1,21 +1,34 @@
 <html>
-  <head>
-    <title>{% block title %}Shorty URL{% endblock %}</title>
-    {% block extra_head %}{% endblock %}
-  </head>
+    <head>
+        {% load static from staticfiles %}
+        <title>{% block title %}Shorty URL{% endblock %}</title>
+        {% block extra_head %}{% endblock %}
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css"%}"/>
+        <link rel="stylesheet" type="text/css" href="{% static "css/shorty.css"%}"/>
+        <script type="text/javascript" src="{% static "js/jquery-2.1.3.min.js"%}"></script>
+        <script type="text/javascript" src="{% static "js/bootstrap.min.js"%}"></script>
+        
+    </head>
 
-  <body>
-      <h1><a href="{% url 'index' %}">{{ request.META.HTTP_HOST }}</a></h1>
-      <hr/>
-      {% block content %}{% endblock %}
-
-      {% block url_form %}
+    <body>
+        <div class="jumbotron">
+          <h1><a href="{% url 'index' %}">{{ request.META.HTTP_HOST }}</a></h1>
+          <p>URL Shortener using Django</p>
+        </div>
+        <div class="container">
+        {% block url_form %}
         {% include 'urls/form.html' %}
-      {% endblock %}
-      {% block bookmarklet %}
-      <br/>
-      {% endblock %}
+        {% endblock %}
+            
+        {% block content %}{% endblock %}
 
-    {% block extra_body %}{% endblock %}
-  </body>
+        
+        {% block bookmarklet %}
+        <br/>
+        {% endblock %}
+
+        {% block extra_body %}{% endblock %}
+        </div>
+        
+    </body>
 </html>
