--- a/shorter/templates/urls/form.html
+++ b/shorter/templates/urls/form.html
@@ -1,5 +1,9 @@
-<form name='url_form' action="{% url 'submit' %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
-</form>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <form name='url_form' action="{% url 'submit' %}" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input id="submit-btn" type="submit" value="Short it!" />
+        </form>
+    </div>
+</div>
